--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Developer Portfolio</title>
 </head>
+
 <body>
-    
+    <section>
+        <div class="header-content">
+            <h1>Welcome To</h1>
+            <h1><span>Mr Bean</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.
+            </p>
+            <a class="hire-me_btn" target="_blank" href="#">HIRE ME</a>
+        </div>
+        <div class="header-content">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+
+
 </body>
+
 </html>
