--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section id="header-area">
         <div class="header-content">
             <h1>Welcome To</h1>
             <h1><span>Mr Bean</span> World</h1>
