dream big complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
         </div>
     </section>
 
-
+    <section id="dream-big">
+        <div class="header-content">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="header-content">
+            <h1>Dream Big</h1>
+            <h2>To Become a Web Developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="hire-me_btn" href="#">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
