--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section id="header-area">
+    <section id="header-area" class="container">
         <div class="header-content">
             <h1>Welcome To</h1>
             <h1><span>Mr Bean</span> World</h1>
@@ -30,7 +30,7 @@
         </div>
     </section>
 
-    <section id="dream-big">
+    <section class="container" id="dream-big">
         <div class="header-content">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -42,6 +42,30 @@
             <a class="hire-me_btn" href="#">Download Resume</a>
         </div>
     </section>
+
+    <section id="experience-area">
+        <h1>Experience</h1>
+        <div class="container">
+            <div id="full" class="experience-content">
+                <h1>Full stack web developer</h1>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby" class="experience-content">
+                <h1>Baby Web Developer</h1>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
 </body>
+<footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 
 </html>
